# SPADES

./: .gitignore  .readthedocs.yaml  136Xe_2betaMinus.yaml  2nubb.yml  CMakeLists.txt  README.md  compute_spectra_psfs.py  generate.py  plot_spectra.py  pyproject.toml  run_all_nuclei.sh  test_dhfs.py  test_pointlike.py
.github/workflows/: docs.yml
RADIAL/: CMakeLists.txt  radial.f
config_files/: 0nu_2betaMinus_template.yaml  0nu_2betaPlus_template.yaml  0nu_ECbetaPlus_template.yaml  2nu_2EC_template.yaml  2nu_2betaMinus_template.yaml  2nu_2betaPlus_template.yaml  2nu_ECbetaPlus_template.yaml
configs/: wavefunctions_config.py
data/atomic_gs_configurations/: build_standard_files.py
data/mass_difference/: deltaM_AME2020_ENSDF2025.yaml  deltaM_AME2020_ENSDF2025_best2BetaMinus2024.yaml  deltaM_KI_2012_2013.yaml
docs/: Makefile  conf.py  configuration.rst  index.rst  installation.rst  outputs.rst  overview.rst  physics_background.rst  quickstart.rst  requirements.txt  usage.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  overview.doctree  usage.doctree
docs/api/: index.rst
example_configs/: 82Se_2nu_2betaMinus_cifra.yaml
examples/: negative_ion.py  simple_dhfs.py
handlers/: output_handler.py  spectra_handler.py  wavefunction_handlers.py
scripts/: gen_cifra_configs.py  plot_alpha_2d.py  plot_alpha_2d_taylor.py  plot_spectra.py
spades/: __init__.py  config.py  data_models.py  dhfs.py  dhfs_wrapper.py  exchange.py  fermi_functions.py  io_handler.py  math_stuff.py  output_config.py  ph.py  radial_wrapper.py  spectra_old.py  wavefunctions.py  wavefunctions_config.py
spades/radial/: CMakeLists.txt  radial.f  radial_new.f
spades/spectra/: base.py  cifra_helpers.py  closure.py  closure_helpers.py  ecbeta.py  spectrum_writer.py  taylor_helpers.py  twobeta.py  twoec.py
spectra/: closure.py  fermi_functions.py
src/: CMakeLists.txt  DHFS.f  dhfs.py  dhfs_wrapper.py  exchange.py  fermi_functions.py  io_handler.py  math_stuff.py  output_handler_old.py  ph.py  radial.f  radial_wrapper.py  spectra.py  wavefunctions.py  wavefunctions_config.py
src/RADIAL/: DHFS.f
src/SPADES/: dhfs.py  dhfs_wrapper.py  io_handler.py  output_config.py  spectra.py  wavefunctions.py
tests/: test_dhfs.py  test_dhfs_handler.py  test_exchange.py  test_fermi_functions.py  test_output_handler.py  test_phase_shifts.py  test_phase_shifts_old.py  test_pointlike.py
utils/: bound_handler.py  dhfs_handler.py  math_stuff.py  ph.py  physics_constants.py  run_handler.py
wavefunctions_computation/: wavefunctions.py
wrappers/: dhfs_wrapper.py  radial_wrapper.py
(+22 files in other folders)
